--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -14,9 +14,11 @@ jobs:
     - uses: actions/checkout@v3
     -name:
      run: echo "Hello World"
+     shell: bash
      
   goodbye:
     runs-on: ubuntu-latest
     steps:
     -name:
      run: echo "Goodbye World"
+     shell: bash
