--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,24 +1,8 @@
-name: Hello world workflow
-
-on:
-  push: 
-  -branches: main
-  pull: 
-  -brances: main
-  workflow_dispatch:
-
+name: hello-world
+on: push
 jobs:
-  hello:
+  my-job:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    -name:
-     run: echo "Hello World"
-     shell: bash
-     
-  goodbye:
-    runs-on: ubuntu-latest
-    steps:
-    -name:
-     run: echo "Goodbye World"
-     shell: bash
+      - name: my-step
+        run: echo "Hello World!"
