--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -11,5 +11,6 @@ jobs:
     steps:
       - name: Good-bye
         run: |
-        whoami
-        hostname
+          echo "Goodbye world"
+          whoami
+          hostname
