--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -14,3 +14,6 @@ jobs:
           echo "Goodbye world"
           whoami
           hostname
+          java -version
+          python -version
+          jq -version
