--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,23 +1,23 @@
 name: hello-world
 on: push
-jobs:
-  my-job:
-    runs-on: ubuntu-latest
-    steps:
-      - name: my-step
-        run: echo "Hello World!"
+# jobs:
+#   my-job:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: my-step
+#         run: echo "Hello World!"
   good-bye:
     runs-on: ubuntu-latest
     steps:
-      - name: Good-bye
-        run: |
-          echo "Goodbye world"
-          whoami
-          hostname
-          java -version
-          python -V
-          python3 --version
-          which jq
-          jq --version
-          pwd
-          date
+          - name: Good-bye
+            run: |
+              echo "Goodbye world"
+              whoami
+              hostname
+              java -version
+              python -V
+              python3 --version
+              which jq
+              jq --version
+              pwd
+              date
